--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ a{
                     <br>
                   <h1 style="color: black; font-size: 40px;">Hello</h1><br>
                   <p style="color: black; font-size: 30px;">Here we present to you the best trips with the local mlhorea and sights from A to Z for family travel and retreats to graduation trips, from tranquility to the purest adrenaline, come take advantage of this unique opportunity and spend your money in the best way possible no regrets</p><br>
-                  <a href="inglesSitezin/ingles/index.html" class="click">Click and learn more!</a>
+                  <a href="Ingles Instrumental/Ingles Instrumental/index.php" class="click">Click and learn more!</a>
                 </span>
             </div>
         </section>
