--- a/Ingles Instrumental/hotel1.html
+++ b/Ingles Instrumental/hotel1.html
@@ -32,7 +32,7 @@
         <p style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;">El Sinbad é muito mais do que uma estadia: é o lugar onde pode relaxar e desfrutar de todos os serviços que colocamos à sua disposição. Desde a requintada oferta gastronómica às instalações completas que incluem spa, piscina, ginásio, zona de convívio e esplanada com serviço de bar, onde a vista se perde imersa nas águas transparentes da praia de Talamanca.
             O estabelecimento dispõe de um total de 111 quartos – vista mar e montanha – que foram completamente renovados. Todo o estabelecimento responde, portanto, a um design atual onde a luz e o conforto são elementos essenciais, integrados no ambiente idílico de Ibiza.</p> 
         <p  style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;"><strong>A estadia de 5 dias (26 de novembro à 30 de novembro) fica em torno de R$1.850 a cada 2 pessoas por quarto com cancelamento gratuito até 25 de novembro.</strong></p>   
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
