--- a/Ingles Instrumental/hotel3.html
+++ b/Ingles Instrumental/hotel3.html
@@ -31,7 +31,7 @@
         <h1 style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 50px;">Hard Rock Hotel Ibiza</h1>
         <p style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;">No Hard Rock Hotel Ibiza, você é o máximo. Porque você vai relaxar em ambientes de primeira classe, terá um grande momento com shows exclusivos e nós iremos mimá-lo ao máximo. Definitivamente sim, você está em La Isla, em uma das mais belas praias da Espanha e do mundo inteiro. No paraíso que é a deslumbrante ilha de Ibiza, o Hard Rock Hotel Ibiza é a acomodação perfeita. Desde surpreendentes peças musicais originais, até massagens com vibrações sonoras, temos todos os extras para tornar a sua experiência conosco ainda mais surpreendente.</p> 
         <p  style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;"><strong>A estadia de 5 dias (26 de novembro à 30 de novembro) fica em torno de R$12.480 a cada 2 pessoas por quarto com cancelamento gratuito até 25 de novembro.</strong></p>   
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 30px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
