--- a/Ingles Instrumental/pacoteavancado.html
+++ b/Ingles Instrumental/pacoteavancado.html
@@ -35,9 +35,10 @@
             <p>DIA 3:Mergulho Scuba para Iniciantes e Mergulho c/ Snorkel, com anoitecer na balada Ushuaïa Ibiza</p><br>   
             <p>DIA 4: 3 horas de viagem de barco com tudo incluído, com anoitecer na balada Amnésia</p><br>   
             <P> DIA 5: passeio de barco de luxo para brinquedos aquáticos </P><br>   
-            <p>Passagens de ida  volta: A PARTIR DE R$  4392,12  GRU  IBZ  voo direto (1 classe)</p><br>   
+            <p>Passagens de ida  volta: A PARTIR DE R$  4392,12  GRU  IBZ  voo direto (1 classe)</p><br> 
+            <strong><p>Para informações de compra chamar no numero: (11)991451532</p></strong>  
         </div>
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
