--- a/Ingles Instrumental/pacotefacil.html
+++ b/Ingles Instrumental/pacotefacil.html
@@ -35,9 +35,10 @@
             <p> DIA 3 Passeio Ferry a Formentera, com balada ao anoitecer na Balada Privilege em Ibiza</p><br>   
             <p> DIA 4 Excursão de Jipe </p><br>   
             <P>   DIA 5 Cruzeiro ao Pôr do Sol c/ Snorkel, Praias e Cavernas </P><br>   
-            <p> Passagens de ida e volta: A PARTIR DE R$ 2957,00 GRU  IBZ 3 paradas</p><br>   
+            <p> Passagens de ida e volta: A PARTIR DE R$ 2957,00 GRU  IBZ 3 paradas</p><br> 
+            <strong><p>Para informações de compra chamar no numero: (11)991451532</p></strong>
         </div>
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
