--- a/Ingles Instrumental/pacotemedio.html
+++ b/Ingles Instrumental/pacotemedio.html
@@ -36,8 +36,9 @@
             <p>DIA 4:Cruzeiro ao Pôr do Sol c/ Snorkel, Praias e Cavernas</p><br>   
             <P>DIA 5:Sant Antoni de Portmany: Excursão de SUP e Snorkel</P><br>   
             <p>Passagens de ida volta: A PARTIR DE R$ 2698,00 GRU  IBZ  2 paradas</p><br>   
+            <strong><p>Para informações de compra chamar no numero: (11)991451532</p></strong>
         </div>
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
