--- a/Ingles Instrumental/restaurante.html
+++ b/Ingles Instrumental/restaurante.html
@@ -36,7 +36,7 @@
             Desde 2014, após a inauguração da Patchwork e Ginger, a oferta gastronômica se expandiu e agora oferece uma viagem do Mediterrâneo ao Líbano e à Ásia.
             As cozinhas e os serviços inovadores, abertos diariamente, fazem do Sa Punta, Patchwork e Ginger, restaurantes essenciais para saborear em Ibiza.
             </p>    
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
