--- a/Ingles Instrumental/restaurante3.html
+++ b/Ingles Instrumental/restaurante3.html
@@ -35,7 +35,7 @@
         Aberto todos os dias das 08:00 às 24:00 oferecendo deliciosos e energéticos cafés da manhã preparados pela nossa cozinheira Maria Domenè
         À noite poderá jantar sob as estrelas na nossa magnífica esplanada situada junto ao Mar Mediterrâneo, onde poderá saborear os suculentos pratos que a nossa querida Chef Gladis prepara com todo o cuidado, bom trabalho e dedicação que tem pela cozinha.
         </p> 
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
