--- a/Ingles Instrumental/hotel2.html
+++ b/Ingles Instrumental/hotel2.html
@@ -35,7 +35,7 @@
             Além disso, o hotel dispõe de uma zona esportiva com uma quadra de multiatividades, outra de vôlei de praia, e serviço de massagens proporcionando um maior descontração e bem-estar a todos os hóspedes.
             </p> 
         <p  style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;"><strong>A estadia de 5 dias (26 de novembro à 30 de novembro) fica em torno de $4.700 a cada 2 pessoas por quarto com cancelamento gratuito antes do dia 19 de novembro.</strong></p>   
-        <a href="index.php" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
+        <a href="index.html" style="margin: 30px; font-family: 'Montserrat', sans-serif; font-size: 25px;">Voltar ao menu</a>
         <br><br>
     </div>
     <br><br><br>
