--- a/Ingles Instrumental/index.html
+++ b/Ingles Instrumental/index.html
@@ -64,7 +64,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1><a href="#" style="text-decoration: none; color: black;">Apitos</a></h1>
+                <h1><a href="#" style="text-decoration: none; color: black;">Apple</a></h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#">HOME</a></li>
