--- a/Site - Sri Lanka/contact.html
+++ b/Site - Sri Lanka/contact.html
@@ -16,10 +16,10 @@
             <header class="main_header">
                 <nav class="navigation_buttons" style="font-family: 'Dosis', sans-serif;">
                     <ul>
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="plans.php">Cruise Plans</a></li>
-                        <li><a href="contact.php">Contact</a></li>
-                        <li><a href="about.php">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="plans.html">Cruise Plans</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html">About Us</a></li>
                     </ul>
                 </nav>
             </header>
