--- a/Site - Sri Lanka/plans.html
+++ b/Site - Sri Lanka/plans.html
@@ -17,10 +17,10 @@
             <header class="main_header">
                 <nav class="navigation_buttons">
                     <ul style="font-family: 'Dosis', sans-serif;">
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="plans.php">Cruise Plans</a></li>
-                        <li><a href="contact.php">Contact</a></li>
-                        <li><a href="about.php">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="plans.html">Cruise Plans</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html">About Us</a></li>
                     </ul>
                 </nav>
             </header>
